# hext-boards

./: Cargo.toml  README.md  default.nix  flake.nix
src/: lib.rs
src/board/: board_example.txt  mod.rs  test.rs
