[package]
name = "hext-boards"
version = "0.1.1"
edition = "2021"
authors = ["Odysseas <odysseas.maheras@gmail.com>"]
description = "A small library that renders hexagonal boards with text on the terminal"
readme = "README.md"
repository = "https://github.com/Odilf/hext-boards/"
license-file = "LICENSE"
keywords = ["terminal", "hexagons", "ascii"]
categories = ["command-line-utilities"]

exclude = [".cargo_vcs_info.json"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.31.4"
termion = "2.0.1"
