[package]
name = "hext-boards"
version = "0.4.0"
edition = "2021"
authors = ["Odilf <odysseas.maheras@gmail.com>"]
description = "A small library that renders hexagonal boards with text on the terminal"
readme = "README.md"
repository = "https://github.com/odilf/hext-boards/"
license = "MIT"
keywords = ["terminal", "hexagons", "ascii"]
categories = ["command-line-utilities"]

exclude = [".cargo_vcs_info.json"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.24.1"

[dev-dependencies]
indoc = "2.0.5"
pretty_assertions = "1.4.1"
